<resources>
    <string name="app_name">TLKapp</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="btn_login">Log in</string>
    <string name="btn_registro">Registrate</string>
    <string name="error_intro">"Por favor "</string>
    <string name="error_blank_username">ingrese un nombre de usuario</string>
    <string name="error_blank_password">ingrese una contraseña</string>
    <string name="error_join">" e "</string>
    <string name="error_end">.</string>
    <string name="progress_login">Logging you in&#8230;</string>
    <string name="ing_usuario">Ingrese su usuario</string>
    <string name="ing_pass">Ingrese su contrasena</string>
    <string name="ing_nom">Ingrese su nombre</string>
    <string name="ing_apell">Ingrese su apellido</string>
    <string name="ing_dni">Ingrese su DNI</string>
    <string name="progress_signup">Signing you up&#8230;</string>
    <string name="title_activity_registro">RegistroActivity</string>
    <string name="title_activity_tlk">TLKActivity</string>
    <string name="boton_perfil">Perfil</string>
    <string name="boton_calendario">Calendario</string>
    <string name="boton_top">Top</string>
    <string name="boton_buscar">Buscar</string>
    <string name="perfil_nombre">Nombre:</string>
    <string name="perfil_apellido">Apellido:</string>
    <string name="perfil_usuario">Usuario:</string>
    <string name="perfil_dni">DNI:</string>
    <string name="facebook_app_id">499080960243190</string>
</resources>
