<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/tkl_activity"
    android:layout_weight="8">

    <LinearLayout
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="5dp">

        <Button
            android:id="@+id/btn_top"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/boton_top"
            android:onClick="onSelectFragment"/>

        <Button
            android:id="@+id/btn_buscar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/boton_buscar"
            android:onClick="onSelectFragment"/>

        <Button
            android:id="@+id/btn_perfil"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/boton_perfil"
            android:onClick="onSelectFragment"/>
    </LinearLayout>
    <LinearLayout
        android:orientation="vertical"
        android:layout_weight="7"
        android:id="@+id/frag_layout"
        android:layout_width="match_parent"
        android:layout_height="0px">

    </LinearLayout>

</LinearLayout>