<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="20dp"
    android:layout_marginLeft="40dp">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/perfil_usuario"
        android:id="@+id/tv_usuario"
        android:layout_row="1"
        android:layout_column="2" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="Medium Text"
        android:id="@+id/edit_usuario"
        android:layout_row="1"
        android:layout_column="3"
        android:layout_marginLeft="25dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/perfil_nombre"
        android:id="@+id/tv_nombre"
        android:layout_row="2"
        android:layout_column="2" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="Medium Text"
        android:id="@+id/edit_nombre"
        android:layout_row="2"
        android:layout_column="3"
        android:layout_marginLeft="25dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/perfil_apellido"
        android:id="@+id/tv_apellido"
        android:layout_row="3"
        android:layout_column="2" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="Medium Text"
        android:id="@+id/edit_apellido"
        android:layout_row="3"
        android:layout_column="3"
        android:layout_marginLeft="25dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/perfil_dni"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/tv_dni"
        android:layout_row="4"
        android:layout_column="2" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Medium Text"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/edit_dni"
        android:layout_row="4"
        android:layout_column="3"
        android:layout_marginLeft="25dp"/>

    <ImageView
        android:layout_width="350px"
        android:layout_height="350px"
        android:id="@+id/foto_perfil"
        android:src="@drawable/perfil"
        android:layout_row="0"
        android:layout_column="3" />

    <Button
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="Guardar"
        android:id="@+id/btnGuardar"
        android:layout_row="5"
        android:layout_column="3" />

</GridLayout>